--- a/deployment-strategies/quarkus/pom.xml
+++ b/deployment-strategies/quarkus/pom.xml
@@ -16,12 +16,6 @@
 
     <name>Quarkus OpenShift TS: Deployment Strategies: Quarkus</name>
 
-    <properties>
-        <!-- this could also be set in application.properties, but this is much closer to what users actually do -->
-        <quarkus.kubernetes.deploy>true</quarkus.kubernetes.deploy>
-        <quarkus.kubernetes-client.trust-certs>true</quarkus.kubernetes-client.trust-certs>
-    </properties>
-
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
@@ -78,4 +72,31 @@
             </plugin>
         </plugins>
     </build>
+    
+    <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <properties>
+                <!-- this could also be set in application.properties, but this is much closer to what users actually do -->
+                <quarkus.kubernetes.deploy>true</quarkus.kubernetes.deploy>
+                <quarkus.kubernetes-client.trust-certs>true</quarkus.kubernetes-client.trust-certs>
+            </properties>
+        </profile>
+        
+        <profile>
+            <id>skip-deployment</id>
+            <activation>
+                <property>
+                    <name>skipITs</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <properties>
+                <quarkus.kubernetes.deploy>false</quarkus.kubernetes.deploy>
+            </properties>
+        </profile>
+    </profiles>
 </project>
