--- a/messaging/amqp-reactive/src/main/resources/application.properties
+++ b/messaging/amqp-reactive/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 quarkus.openshift.expose=true
 quarkus.s2i.base-jvm-image=registry.access.redhat.com/openjdk/openjdk-11-rhel7
 
+# Configures the AMQP broker credentials.
 %test.amqp-host=localhost
 amqp-host=amq-broker-amqp
 amqp-port=5672
