--- a/.github/workflows/super.yml
+++ b/.github/workflows/super.yml
@@ -4,7 +4,7 @@ on:
   - workflow_dispatch
 jobs:
   build-released:
-    name: JVM build - released Quarkus
+    name: JVM build - TESSST
     runs-on: ubuntu-latest
     strategy:
       matrix:
