--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,7 @@
 
         <module>external-applications/todo-demo-app</module>
         <module>external-applications/quarkus-workshop-super-heroes</module>
+        <module>external-applications/quickstarts-app</module>
 
         <module>deployment-strategies/quarkus</module>
     </modules>
