--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,8 @@
         <module>micrometer/prometheus-kafka</module>
 
         <module>external-applications/todo-demo-app</module>
-        <module>external-applications/quarkus-workshop-super-heroes</module>
+        
+        <module>new-module!</module>
 
         <module>deployment-strategies/quarkus</module>
     </modules>
@@ -68,7 +69,7 @@
         <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
         <version.apicurio.registry.utils.serde>1.3.2.Final</version.apicurio.registry.utils.serde>
         <version.quarkiverse.apicurio.registry.client>0.0.1</version.quarkiverse.apicurio.registry.client>
-        <version.strimzi>0.20.1</version.strimzi>
+        <version.strimzi>0.25.1</version.strimzi>
         <version.apache-httpclient-fluent>4.5.12</version.apache-httpclient-fluent> <!-- same as Apache HTTP Client managed by Quarkus BOM -->
         <version.fusesource-jansi>2.3.2</version.fusesource-jansi>
         <version.impsort-maven-plugin>1.6.0</version.impsort-maven-plugin>
